# M_O_Landing

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
static_src/: index.html
static_src/assets/css/: base.css  blog.css  components.css  contacts.css  home.css  legal.css  prices.css  product-metis-one.css  services.css  userexp.css
static_src/assets/img/favicon/: site.webmanifest
static_src/assets/js/: app.js  blog.js
static_src/blog/: index.html  post.html  posts_ru.json
static_src/blog/ru/: example-post.json
static_src/contacts/: index.html
static_src/lang/: en.json  ru.json  tr.json
static_src/legal/: privacy.html  rekvizit.html  user-agreement.html
static_src/partials/: footer.html  header.html
static_src/prices/: index.html
static_src/products/: metis-one.html
static_src/services/: index.html
static_src/user-experiences/: index.html
